// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseText /> should render regular text 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0"
    data-blade-component="base-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<BaseText /> should render text as paragraph element 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: line-through;
  text-decoration-line: line-through;
  -webkit-text-decoration-color: hsla(212,39%,16%,1);
  text-decoration-color: hsla(212,39%,16%,1);
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <p
    class="c0"
    data-blade-component="base-text"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<BaseText /> should render text in italics style with line-through 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: line-through;
  text-decoration-line: line-through;
  -webkit-text-decoration-color: hsla(212,39%,16%,1);
  text-decoration-color: hsla(212,39%,16%,1);
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0"
    data-blade-component="base-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<BaseText /> should render text with default properties 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0"
    data-blade-component="base-text"
  >
    Displaying some text
  </div>
</div>
`;
